# raylib-php

./: .gitattributes  .gitignore  CMakeLists.txt  CREDITS  Dockerfile  LICENSE.md  MAPPING.md  README.md  RELEASES  audiostream.c  audiostream.h  boneinfo.c  boneinfo.h  boundingbox.c  boundingbox.h  build.sh  camera2d.c  camera2d.h  camera3d.c  camera3d.h  clean.sh  color.c  color.h  composer.json  config.h.in~  config.m4  config.w32  docker-compose.yml  filepathlist.c  filepathlist.h  font.c  font.h  glyphinfo.c  glyphinfo.h  image.c  image.h  installer.nsi  mappings-reader.php  material.c  material.h  (+141 more)
bundle/runtime/: Cargo.toml  build.rs  example.php  zend-bindings.rs
bundle/runtime/src/: main.rs  php.rs
examples/: raylib-colors.php  raylib.php  stub.php
examples/core/: 2d-camera.php  basic-window.php  color-select.php  input-gamepad-input.php  input-keys.php  input-mouse-wheel.php  input-mouse.php  scissor-test.php
examples/games/: floppy.php  gorilas.php
examples/stub/: Audio.php  Camera.php  Camera2D.php  Camera3D.php  CharInfo.php  Collision.php  Color.php  Draw.php  Flags.php  Font.php  Image.php  PixelFormat.php  Rectangle.php  RenderTexture2D.php  SpriteFont.php  Text.php  Texture.php  Timming.php  Vector2.php  Vector3.php  Vector4.php  Wave.php  Window.php  composer.json
examples/stub/Input/: Gamepad.php  Key.php  Mouse.php
examples/tests/: camera2d.php  charinfo.php  draw-fan.php  gif.php  image-pixels.php  ray.php  wave.php
examples/text/: font-filters.php
examples/textures/: bunnymark.php  image-loading.php  ops.php  textures_image_loading.php
generate/: composer.json  main.php  raylib_api.json  test.php
generate/examples/audio/: audio_module_playing.php  audio_sound_loading.php
generate/examples/core/: core_2d_camera.php  core_3d_camera.php  core_3d_camera_first_person.php  test.php
generate/examples/models/: models_animation.c  models_animation.php  models_billboard.php  models_box_collisions.php  models_cubicmap.c  models_cubicmap.php  models_loading.php  models_mesh_picking.php
generate/examples/textures/: textures_background_scrolling.php  textures_bunnymark.php
generate/manual/: LoadModelAnimations.c  color.c
generate/src/: Enum.php  EnumValue.php  Field.php  Func.php  Helper.php  Param.php  Parser.php  Struct.php  Stub.php
generate/src/Generate/: CFunction.php  ObjectClone.php  ObjectConstructor.php  ObjectFreePropertyHandler.php  ObjectFreeStorage.php  ObjectGetGarbageCollector.php  ObjectGetProperties.php  ObjectGetPropertyPointerPointer.php  ObjectHasProperty.php  ObjectMethods.php  ObjectNew.php  ObjectNewEx.php  ObjectPropertyGetters.php  ObjectPropertyHandler.php  ObjectPropertyReader.php  ObjectPropertySetters.php  ObjectPropertyWriter.php  ObjectRL.php  ObjectStartup.php  ObjectStruct.php
generate/src/Generate/Zend/: ArgBeginInfo.php  ArgInfo.php  ZParam.php
generate/stubs/: raylib.php
generate/templates/: struct-array.c
include/: cvector.h  hashmap.c  hashmap.h
lib/: glfw3.lib
notes/: Creating Functions in PHP Internals.md  Php Internal Objects Issue.md
php-docker-versions/php-8.0/: Dockerfile
php-docker-versions/php-8.1/: Dockerfile
php-docker-versions/php-8.2/: Dockerfile
php-docker-versions/php-8.3/: Dockerfile
tests/: 001.phpt  vector3.php
